# noir_bignum.js

./: .gitignore  Cargo.toml  README.md  compile.sh  jest.config.js  package.json  tsconfig.json
scripts/: compile-wasm.sh  publish.sh
src/: index.ts
tests/: bn.test.ts
wasm/: Cargo.toml
wasm/src/: lib.rs
